Refactor Helm chart descriptions

--- a/charts/podiumd-monitoring-logging/Chart.yaml
+++ b/charts/podiumd-monitoring-logging/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: podiumd-monitoring-logging
-description: A Helm chart for deploying monitoring and logging
+description: PodiumD monitoring and logging Helm chart
 version: 1.0.0-alpha.1
 appVersion: "1.0"
 
