--- a/charts/brpmock/Chart.yaml
+++ b/charts/brpmock/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: brpmock
-description: A Helm chart for the BRP Proxy and GBA Mock combination
+description: BRP Proxy and GBA Mock combination Helm chart
 version: 1.2.4
 appVersion: "2.0.8"
 
