--- a/charts/openldap/Chart.yaml
+++ b/charts/openldap/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
 name: openldap
-description: A Helm chart for Open LDAP
+description: Open LDAP Helm chart
 version: 1.0.2
 appVersion: "2.6.8"
