podiumd en zac Helm chart aangepast op basis van git commits op Info zac Helm chart t/m 23-7-2024

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -59,9 +59,6 @@ openldap:
   nameOverride: openldap
   fullnameOverride: openldap
 
-vngreferentielijsten:
-  nameOverride: vngreferentielijsten
-
 brpmock:
   enabled: false
   nameOverride: brpmock
@@ -85,6 +82,9 @@ openzaak:
       username: ""
       password: ""
     isHttps: false
+  extraEnvVars:
+    - name: DISABLE_2FA
+      value: "True"
   persistence:
     size: 10Gi
     existingClaim: openzaak
