--- a/charts/zac/Chart.yaml
+++ b/charts/zac/Chart.yaml
@@ -1,14 +1,14 @@
 apiVersion: v2
 name: zac
 description: ZAC Helm chart
-version: 1.1.0
+version: 1.1.1
 appVersion: "latest"
 dependencies:
   - name: opentelemetry-collector
-    alias: opentelemetrycollector
+    alias: opentelemetryCollector
     version: "0.55.2"
     repository: https://open-telemetry.github.io/opentelemetry-helm-charts
-    condition: opentelemetrycollector.enabled
+    condition: opentelemetryCollector.enabled
   - name: solr
     version: "9.1.3"
     repository: https://charts.bitnami.com/bitnami
