--- a/charts/zac/values.yaml
+++ b/charts/zac/values.yaml
@@ -90,10 +90,6 @@ bagApi:
   url: "" # https://api.bag.kadaster.nl/lvbag/individuelebevragingen/v2
   apiKey: ""
 
-# vrlApi Configuration of the Referentielijsten & Selectielijst API provider (VNG)
-vrlApi:
-  url: "" # http://vng-referentielijsten.internal
-
 # openForms Configuration of the Open Forms URL
 openForms:
   url: "" # https://open-forms.example.com
@@ -148,16 +144,24 @@ maxFileSizeMB: 80
 # remoteDebug Enable Java remote debugging
 remoteDebug: False
 
+# replicaCount the number of replicas to run
 replicaCount: 1
 
+# image the image parameters to use
 image:
   repository: ghcr.io/infonl/zaakafhandelcomponent
   pullPolicy: IfNotPresent
 
+# imagePullSecrets specifies image pull secrets
 imagePullSecrets: [ ]
+
+# nameOverride name to use
 nameOverride: ""
+
+# fullnameOverride fullname to use
 fullnameOverride: ""
 
+# serviceAccount service account parameters
 serviceAccount:
   # Specifies whether a service account should be created
   create: true
@@ -167,55 +171,44 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name: ""
 
+# podAnnotations pod specific annotations
 podAnnotations: { }
 
+# podSecurityContext pod specific security context
 podSecurityContext: { }
-# fsGroup: 2000
 
+# securityContext generic security context
 securityContext: { }
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-# runAsNonRoot: true
-# runAsUser: 1000
 
+# service service specifications
 service:
   type: ClusterIP
   port: 80
   annotations: { }
 
+# ingress ingress specifications
 ingress:
   enabled: false
   className: ""
   annotations: { }
-  # kubernetes.io/ingress.class: nginx
-  # kubernetes.io/tls-acme: "true"
   hosts:
     - host: chart-example.local
       paths:
         - path: /
           pathType: ImplementationSpecific
   tls: [ ]
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
 
+# backendConfig Use by GCP Ingress
 backendConfig:
   enabled: false
 
+# resources specify resources limits and requests
 resources:
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
   requests:
     cpu: 100m
     memory: 1Gi
 
+# autoscaling set autoscaling parameters
 autoscaling:
   enabled: false
   minReplicas: 1
@@ -223,21 +216,30 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
+# nodeSelector set node selector parameters
 nodeSelector: { }
 
+# tolerations set toleration parameters
 tolerations: [ ]
 
+# affinity set affinity parameters
 affinity: { }
 
 # Extra objects to deploy (value evaluated as a template)
 extraDeploy: [ ]
 
+# opa provision the opa sidecar container
 opa:
   image:
     repository: openpolicyagent/opa
     tag: "edge-static"
     pullPolicy: IfNotPresent
+  resources:
+    requests:
+      cpu: 10m
+      memory: 20Mi
 
+# solr provision the SOLR subchart
 solr:
   coreNames: [ "zac" ]
   persistence:
@@ -281,6 +283,7 @@ solr:
   zookeeper:
     enabled: false
 
+# officeConverter provision the office converter deployment
 officeConverter:
   image:
     repository: ghcr.io/eugenmayer/kontextwork-converter
@@ -288,13 +291,6 @@ officeConverter:
     pullPolicy: IfNotPresent
   replicas: 1
   resources:
-    # We usually recommend not to specify default resources and to leave this as a conscious
-    # choice for the user. This also increases chances charts run on environments with little
-    # resources, such as Minikube. If you do want to specify resources, uncomment the following
-    # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-    # limits:
-    #   cpu: 100m
-    #   memory: 128Mi
     requests:
       cpu: 100m
       memory: 512Mi
@@ -305,19 +301,13 @@ officeConverter:
   podAnnotations: { }
   imagePullSecrets: [ ]
   podSecurityContext: { }
-  # fsGroup: 2000
   securityContext: { }
-    # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
   nodeSelector: { }
   affinity: { }
   tolerations: [ ]
 
-opentelemetrycollector:
+# opentelemetryCollector provision the opentelemetry collector sub chart
+opentelemetryCollector:
   samplerType: "off"
   mode: deployment
   replicaCount: 1
