--- a/charts/zac/templates/config.yaml
+++ b/charts/zac/templates/config.yaml
@@ -28,6 +28,7 @@ data:
   {{- if .Values.additionalAllowedFileTypes }}
   ADDITIONAL_ALLOWED_FILE_TYPES: {{ .Values.additionalAllowedFileTypes }}
   {{- end}}
+  MAX_FILE_SIZE_MB: {{ .Values.maxFileSize }}
   MP_HEALTH_EMPTY_LIVENESS_CHECKS_STATUS: DOWN
   MP_HEALTH_EMPTY_READINESS_CHECKS_STATUS: DOWN
   OBJECTS_API_CLIENT_MP_REST_URL: {{ required "Valid .Values.objectenApi.url entry required!" .Values.objectenApi.url }}
