--- a/charts/kiss/values.yaml
+++ b/charts/kiss/values.yaml
@@ -80,7 +80,7 @@ frontend:
     name: ""
   image:
     repository: ghcr.io/klantinteractie-servicesysteem/kiss-frontend
-    tag: "latest"
+    tag: "deventer"
     pullPolicy: IfNotPresent
   resources:
     requests:
