ZAC naar Open Klant 2

--- a/charts/zac/templates/secret.yaml
+++ b/charts/zac/templates/secret.yaml
@@ -10,7 +10,7 @@ stringData:
   BRP_API_KEY: "{{ required "Valid .Values.brpApi.apiKey entry required!" .Values.brpApi.apiKey }}"
   CONTACTMOMENTEN_API_SECRET: "{{ required "Valid .Values.contactmomentenApi.secret entry required!" .Values.contactmomentenApi.secret }}"
   DB_PASSWORD: "{{ required "Valid .Values.db.password entry required!" .Values.db.password }}"
-  KLANTEN_API_SECRET: "{{ required "Valid .Values.klantenApi.secret entry required!" .Values.klantenApi.secret }}"
+  KLANTINTERACTIES_API_TOKEN: "{{ required "Valid .Values.klantenApi.token entry required!" .Values.klantenApi.token }}"
   KVK_API_KEY: "{{ required "Valid .Values.kvkApi.apiKey entry required!" .Values.kvkApi.apiKey }}"
   LDAP_PASSWORD: "{{ required "Valid .Values.ldap.password entry required!" .Values.ldap.password }}"
   OBJECTS_API_TOKEN: "{{ required "Valid .Values.objectenApi.token entry required!" .Values.objectenApi.token }}"
