--- a/charts/zac/values.yaml
+++ b/charts/zac/values.yaml
@@ -56,8 +56,7 @@ notificationsSecretKey: ""
 # klantenApi Configuration of Klanten API provider (Open Klant)
 klantenApi:
   url: "" # http://open-klant.internal
-  clientId: ""
-  secret: ""
+  token: ""
 
 # contactmomentenApi Configuration of Contactmomenten API provider (Open Klant)
 contactmomentenApi:
