--- a/charts/podiumd/Chart.yaml
+++ b/charts/podiumd/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: podiumd
 description: PodiumD Helm chart
 type: application
-version: 1.1.2
+version: 1.1.3
 appVersion: "1.3.0"
 dependencies:
   - name: keycloak
@@ -52,17 +52,10 @@ dependencies:
     repository: "@maykinmedia"
     condition: objecttypen.enabled
   - name: openklant
-    alias: openklantv1
-    version: ~1.3.2
-    # appVersion: 0.5-pre -> 1.0.0
-    repository: "@maykinmedia"
-    condition: openklantv1.enabled
-  - name: openklant
-    alias: openklantv2
     version: ~1.3.2
     # appVersion: 0.5-pre -> 2.1.0
     repository: "@maykinmedia"
-    condition: openklantv2.enabled
+    condition: openklant.enabled
     tags:
       - zaak
   - name: openforms
