--- a/charts/podiumd/templates/keycloak-config-configmap.yaml
+++ b/charts/podiumd/templates/keycloak-config-configmap.yaml
@@ -57,25 +57,16 @@ data:
           - "{{ .Values.objecttypen.configuration.oidcUrl }}/*"
         secret: {{ .Values.objecttypen.configuration.oidcSecret | quote }}
       {{- if .Values.tags.zaak }}
-      - clientId: openklantv1
-        name: Open Klant V1
+      - clientId: openklant
+        name: Open Klant
         enabled: true
         clientAuthenticatorType: client-secret
         redirectUris:
-          - "{{ .Values.openklantv1.configuration.oidcUrl }}/*"
+          - "{{ .Values.openklant.configuration.oidcUrl }}/*"
         webOrigins:
-          - "{{ .Values.openklantv1.configuration.oidcUrl }}/*"
-        secret: {{ .Values.openklantv1.configuration.oidcSecret | quote }}
+          - "{{ .Values.openklant.configuration.oidcUrl }}/*"
+        secret: {{ .Values.openklant.configuration.oidcSecret | quote }}
       {{- end }}
-      - clientId: openklantv2
-        name: Open Klant V2
-        enabled: true
-        clientAuthenticatorType: client-secret
-        redirectUris:
-          - "{{ .Values.openklantv2.configuration.oidcUrl }}/*"
-        webOrigins:
-          - "{{ .Values.openklantv2.configuration.oidcUrl }}/*"
-        secret: {{ .Values.openklantv2.configuration.oidcSecret | quote }}
       {{- if .Values.tags.formulier }}
       - clientId: openformulieren
         name: Open Formulieren
