Disable 2 factor authentication in Open Klant (V2)

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -291,6 +291,9 @@ openklant:
     twoFactorAuthentication:
       forceOtpAdmin: false
       patchAdmin: false
+  extraEnvVars:
+    - name: DISABLE_2FA
+      value: "True"
   image:
     tag: "2.1.0"
   resources:
