--- a/charts/zac/templates/secret.yaml
+++ b/charts/zac/templates/secret.yaml
@@ -8,9 +8,8 @@ stringData:
   AUTH_SECRET: "{{ required "Valid .Values.auth.secret entry required!" .Values.auth.secret }}"
   BAG_API_KEY: "{{ required "Valid .Values.bagApi.apiKey entry required!" .Values.bagApi.apiKey }}"
   BRP_API_KEY: "{{ required "Valid .Values.brpApi.apiKey entry required!" .Values.brpApi.apiKey }}"
-  CONTACTMOMENTEN_API_SECRET: "{{ required "Valid .Values.contactmomentenApi.secret entry required!" .Values.contactmomentenApi.secret }}"
   DB_PASSWORD: "{{ required "Valid .Values.db.password entry required!" .Values.db.password }}"
-  KLANTINTERACTIES_API_TOKEN: "{{ required "Valid .Values.klantenApi.token entry required!" .Values.klantenApi.token }}"
+  KLANTINTERACTIES_API_TOKEN: "{{ required "Valid .Values.klantinteractiesApi.token entry required!" .Values.klantinteractiesApi.token }}"
   KVK_API_KEY: "{{ required "Valid .Values.kvkApi.apiKey entry required!" .Values.kvkApi.apiKey }}"
   LDAP_PASSWORD: "{{ required "Valid .Values.ldap.password entry required!" .Values.ldap.password }}"
   OBJECTS_API_TOKEN: "{{ required "Valid .Values.objectenApi.token entry required!" .Values.objectenApi.token }}"
