--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -363,6 +363,8 @@ openformulieren:
       cpu: 400m
       memory: 1.5Gi
   worker:
+    livenessProbe:
+      initialDelaySeconds: 120
     resources:
       requests:
         cpu: 50m
