Update 1.3.0 PodiumD Helm chart zodat Open Formulieren altijd geinstalleerd wordt

--- a/charts/podiumd/templates/openformulieren-storage.yaml
+++ b/charts/podiumd/templates/openformulieren-storage.yaml
@@ -1,4 +1,4 @@
-{{- if and .Release.IsInstall (and .Values.tags.formulier (or .Values.openformulieren.enabled (not (hasKey .Values.openformulieren "enabled")))) -}}
+{{- if and .Release.IsInstall (or .Values.openformulieren.enabled (not (hasKey .Values.openformulieren "enabled"))) -}}
 {{- if not (lookup "v1" "PersistentVolumeClaim" .Release.Namespace .Values.openformulieren.persistence.existingClaim) -}}
 ---
 apiVersion: v1
