Update 1.3.0 PodiumD Helm chart using the latest version of Maykin Media Helm charts

--- a/charts/podiumd/templates/objecten-storage.yaml
+++ b/charts/podiumd/templates/objecten-storage.yaml
@@ -1,4 +1,4 @@
-{{- if and .Release.IsInstall (or .Values.objecten.enabled (not (hasKey .Values.objecten "enabled"))) -}}
+{{- if or .Values.objecten.enabled (not (hasKey .Values.objecten "enabled")) -}}
 {{- if not (lookup "v1" "PersistentVolumeClaim" .Release.Namespace .Values.objecten.persistence.existingClaim) -}}
 ---
 apiVersion: v1
