--- a/charts/podiumd/templates/openzaak-storage.yaml
+++ b/charts/podiumd/templates/openzaak-storage.yaml
@@ -1,4 +1,4 @@
-{{- if and .Release.IsInstall (or .Values.openzaak.enabled (not (hasKey .Values.openzaak "enabled"))) -}}
+{{- if or .Values.openzaak.enabled (not (hasKey .Values.openzaak "enabled")) -}}
 {{- if not (lookup "v1" "PersistentVolumeClaim" .Release.Namespace .Values.openzaak.persistence.existingClaim) -}}
 ---
 apiVersion: v1
