.Values.feature.bpmnSupport added to ZAC Helm chart

--- a/charts/zac/values.yaml
+++ b/charts/zac/values.yaml
@@ -5,6 +5,9 @@
 # contextUrl External URL to the zaakafhandelcomponent. (https://zaakafhandelcomponent.example.com)
 contextUrl: ""
 
+feature:
+  bpmnSupport: false
+
 # db Configuration of database connection
 db:
   host: "" # database.internal or 1.2.3.4
